--- a/styles.css
+++ b/styles.css
@@ -395,6 +395,9 @@ button {
   font-size: 14px;
   color: #1f3749;
 }
+.testimonios-img {
+  width: 330px;
+}
 .mainButton3 {
   font-size: 18px;
   color: white;
@@ -411,7 +414,6 @@ button {
 .blue {
   background-color: #1f3749;
 }
-
 .red {
   background-color: #b13346;
 }
@@ -469,7 +471,7 @@ button {
   height: 160px;
   justify-content: center;
   margin: 0px auto;
-  opacity: 0.7;
+  opacity: 0.5;
   background-color: #1f3749;
   /*border: 2px solid red;*/
 }
@@ -557,7 +559,7 @@ button {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 80%;
   margin: 0px auto;
@@ -566,9 +568,13 @@ button {
   width: 300px;
   margin: 10px;
 }
-.width {
-  width: 90%;
-  justify-content: space-between;
+.flexContainer4 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
   margin: 0px auto;
 }
 .div300px {
@@ -595,6 +601,8 @@ button {
   display: flex;
   align-items: center;
 }
+
+/*FOOTER*/
 footer {
   height: 130px;
   width: 100%;
@@ -618,7 +626,6 @@ footer {
 .logoFooter {
   width: 10vw;
   margin-right: 5vw;
-  /*padding-left: 16vw;*/
 }
 .footer1 {
   width: 70%;
@@ -679,11 +686,9 @@ hr {
   color: white;
   margin: 5px;
 }
+
+/* xs devices */
 @media (max-width: 400px) {
-  /* xs devices */
-  .square {
-    width: 90%;
-  }
   .logo {
     display: none;
   }
@@ -699,9 +704,7 @@ hr {
     margin: 5px;
     align-items: flex-start;
   }
-  #noIcon {
-    display: none;
-  }
+
   .login {
     margin: 0px;
   }
@@ -725,13 +728,18 @@ hr {
     padding: 0;
     margin: 10px;
   }
+  .square {
+    width: 100%;
+  }
   .video {
     width: 350px;
     height: auto;
   }
   .grey {
     flex-direction: column;
-    padding-bottom: 20px;
+  }
+  .space {
+    width: 100%;
   }
   .squareBtn {
     margin: 0px;
@@ -739,8 +747,15 @@ hr {
   .flexContainer2 {
     height: 400px;
   }
-  .fa-chevron-left {
-    display: none;
+  .contenedor-carrousel {
+    width: 50%;
+  }
+  .carrousel-img {
+    width: 100px;
+    height: auto;
+  }
+  #noIcon {
+    height: 10px;
   }
   .mainButton {
     width: 130px;
@@ -750,9 +765,11 @@ hr {
   .p10px {
     display: none;
   }
+  .listRecentItemContainer {
+    width: 200px;
+  }
   .listRecentItem {
     width: 200px;
-    height: 520px;
   }
   .listRecentItemImage {
     width: 200px;
@@ -760,11 +777,20 @@ hr {
   .listRecentItemExcerpt {
     width: 180;
   }
+  .flexContainer3 {
+    width: 100%;
+  }
+  .mainButton2 {
+    font-size: 1rem;
+  }
   .width300px {
     width: 180px;
   }
-  .div400px {
+  .testimonios-img {
     width: 200px;
+  }
+  .div400px {
+    width: 100%;
   }
   footer {
     width: 100%;
@@ -774,6 +800,9 @@ hr {
     padding: 30px 0px;
     margin: 0px;
   }
+  hr {
+    width: 98%;
+  }
   .inline {
     display: flex;
     flex-direction: column;
@@ -782,36 +811,53 @@ hr {
     margin: 0 auto;
     width: 70%;
   }
+  .footer1 {
+    padding-left: 5vw;
+  }
+  .footer2 {
+    padding-left: 30px;
+    width: 80%;
+  }
+  .margin-left {
+    margin: 0px;
+  }
+  #copyright {
+    padding-left: 9vw;
+  }
 }
+/*mobile devices*/
 @media (min-width: 401px) and (max-width: 576px) {
-  /*small devices*/
   .logo {
     display: none;
   }
   .menuItem {
     font-size: 2vh;
-    margin: 3px;
+    margin: 6px;
     align-items: flex-start;
   }
-  #noIcon {
-    display: none;
-  }
+
   .login {
     margin: 0px;
   }
+  .mainContainer {
+    height: auto;
+    width: 100%;
+  }
   h1 {
-    font-size: 22px;
-    margin: 10px;
+    font-size: 1.5rem;
+    font-weight: lighter;
   }
   select {
-    margin-bottom: 5px;
+    margin: 5px;
+    width: 80%;
   }
   .button {
-    margin-left: 50px;
+    margin-top: 10px;
   }
-  /*.square {
-    width: 90%;
-  }*/
+
+  .square {
+    width: 100%;
+  }
   .video {
     width: 350px;
     height: auto;
@@ -820,15 +866,16 @@ hr {
     flex-direction: column;
     padding-bottom: 20px;
   }
+  .register-title {
+    font-size: 1.7rem;
+  }
+  .space {
+    width: 100%;
+  }
   .squareBtn {
     margin: 0px;
   }
-  /*.flexContainer2 {
-    height: 400px;
-  }*/
-  .fa-chevron-left {
-    display: none;
-  }
+
   .mainButton {
     width: 130px;
     height: 80px;
@@ -837,9 +884,11 @@ hr {
   .p10px {
     display: none;
   }
+  .listRecentItemContainer {
+    width: 200px;
+  }
   .listRecentItem {
     width: 200px;
-    height: 520px;
   }
   .listRecentItemImage {
     width: 200px;
@@ -847,15 +896,34 @@ hr {
   .listRecentItemExcerpt {
     width: 180;
   }
+  #overlay2 {
+    width: 200px;
+  }
+  .contenedor-carrousel {
+    width: 71%;
+  }
+  .carrousel-img {
+    width: 100px;
+    height: auto;
+  }
+  #noIcon {
+    height: 10px;
+  }
   .width300px {
     width: 180px;
   }
   .div400px {
-    width: 200px;
+    width: 100%;
+  }
+  .mainButton2 {
+    font-size: 1rem;
+  }
+  .flexContainer3 {
+    width: 100%;
   }
   footer {
     width: 100%;
-    height: 400px;
+    height: 420px;
     flex-direction: column;
     align-items: center;
     padding: 0px;
@@ -866,61 +934,199 @@ hr {
     flex-direction: column;
   }
   .logoFooter {
-    margin: 0px 100px;
+    width: 32vw;
+    margin-top: 40px;
+  }
+  .footer2 {
+    padding-left: 15vw;
+  }
+  #copyright {
+    padding-left: 6vw;
+  }
+  .margin-left {
+    margin: 0px;
   }
 }
 
+/*medium devices*/
 @media (min-width: 577px) and (max-width: 991px) {
-  /*medium*/
+  .gral-container {
+    overflow: hidden;
+  }
   .logo {
     padding-top: 15px;
   }
-  h1 {
-    font-size: 2.5rem;
-    margin-top: 10vh;
+  .menuItem {
+    font-size: 0.9rem;
   }
   .mainContainer {
-    height: 55vh;
+    height: auto;
+    width: 100%;
   }
-
-  /*.flexContainer2 {
-    height: 220px;
-  }*/
+  h1 {
+    font-size: 2rem;
+    font-weight: lighter;
+    margin-top: 10vh;
+  }
+  select {
+    margin: 5px 30px;
+    width: 80%;
+  }
+  .blog {
+    width: 80%;
+    margin: 20px auto;
+    justify-content: center;
+  }
+  .button {
+    margin: 10px;
+    justify-content: center;
+  }
+  .container2 {
+    width: 100%;
+  }
+  .contenedor-carrousel {
+    width: 65%;
+  }
+  #noIcon {
+    height: 10px;
+  }
+  .width {
+    justify-content: center;
+  }
+  .div300px {
+    width: 80vw;
+  }
+  .testimonios-img {
+    width: 80vw;
+  }
   .div220px {
     margin-top: 10px;
+  }
+  .flexContainer3 {
+    justify-content: center;
+  }
+  footer {
+    width: 100%;
+    height: 420px;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    margin: 0px;
+  }
+  .inline {
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0px;
+  }
+  .logoFooter {
+    width: 32vw;
+    margin-top: 40px;
+  }
+  .footer2 {
+    padding-left: 15vw;
+  }
+  #copyright {
+    padding-left: 4vw;
+  }
+  .margin-left {
+    margin: 0px;
+  }
+  hr {
+    width: 99.7%;
+  }
+}
+/*devices bigger than 990px*/
+@media (min-width: 990px) and (max-width: 1199px) {
+  .logo {
+    width: 100px;
+  }
+  .mainContainer {
+    height: auto;
+    width: 100%;
+  }
+  h1 {
+    font-size: 2rem;
+    font-weight: lighter;
+    margin-top: 10vh;
+  }
+  select {
+    margin: 5px;
+    width: 180px;
+  }
+  .space {
+    justify-content: space-around;
+  }
+  .register-title {
+    font-size: 1.8rem;
+  }
+  .mainButton3 {
+    width: 19vw;
+  }
+  .contenedor-carrousel {
+    width: 76%;
+  }
+  #noIcon {
+    height: 10px;
+  }
+  .flexContainer {
+    flex-direction: row;
+  }
+  .flexContainer3 {
+    width: 75%;
+    justify-content: space-around;
+  }
+  .div300px {
+    width: 20vw;
+  }
+  .testimonios-img {
+    width: 20vw;
+  }
+  .mini-title {
+    font-size: 1.6rem;
+  }
+  .div400px {
+    width: 47%;
+  }
+  .p14px {
+    font-size: 1rem;
   }
   footer {
     height: 300px;
   }
+  .footer1 {
+    width: 80%;
+  }
   .logoFooter {
-    width: 150px;
-    margin: 0px 30px;
-    justify-content: center;
+    width: 17vw;
   }
   .inline {
-    padding: 10px 0px;
+    display: flex;
+    flex-direction: row;
+    margin: 0px;
   }
-}
-@media (min-width: 990px) and (max-width: 1199px) {
-  /*bigger than 990px*/
-  .logo {
-    width: 100px;
+  .margin-left,
+  .margin-right10,
+  .margin-right24,
+  .margin-right35 {
+    margin: 0px;
   }
-
-  /*.flexContainer2 {
-    height: 250px;
-  }*/
-  footer {
-    height: 200px;
+  .inline2 {
+    margin: 0px;
+    justify-content: flex-end;
   }
-
+  #copyright {
+    padding-left: 3vw;
+  }
+  /*bigger than 1200px*/
   @media (min-width: 1200px) and (max-width: 10199px) {
-    /*bigger than 1200px*/
     .logo {
       width: auto;
     }
     nav {
       height: 15vh;
+    }
+    .mainButton3 {
+      width: 19vw;
     }
     footer {
       height: 200px;
@@ -930,11 +1136,11 @@ hr {
       justify-content: center;
     }
     .footer1 {
-      width: 80vw;
+      width: 80%;
       justify-content: center;
     }
     .footer2 {
-      width: 80vw;
+      width: 80%;
       justify-content: center;
     }
     .containerFooter {
